<resources xmlns:tools="http://schemas.android.com/tools"
        tools:locale="en" tools:ignore="MissingTranslation">
    <string name="app_name">Ludo</string>
    <string name="app_name_long">Privacy Friendly Ludo</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial">Tutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New game</string>
    <string name="game_button_continue">Continue game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly Ludo?</string>
    <string name="help_whatis_answer">Privacy Friendly Ludo is a boardgame.</string>
    <string name="help_playerNumber">How many Players can play the Game?</string>
    <string name="help_playerNumber_answer">On the small gamefield it is possible to play with up to 4 players. On the big gamefield with up to 6 players.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Ludo does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_rules">What are the rules of Privacy Friendly Ludo?</string>
    <string name="help_rules_answer1">
        Rolling a six means that you have to set a figure from home field (start position) to the colored start field.
    </string>
    <string name="help_rules_answer2">
        If the start field is occupied, you have to make it free as soon as possible.
        </string>
    <string name="help_rules_answer3">
        Are no more figures on the home field and a six was rolled all other figures can be used.
        Also the startfield has not to be free.
        </string>
    <string name="help_rules_answer4">
        If the target field of a figure is occupied by an opponent figure, the opponent figure will be beaten and send back to the home field.
        </string>
    <string name="help_rules_answer5">
        If the target field of a figure is occupied by another figure of the same player, the turn is not allowed.
        Therefore another figure will be chosen or the turn will be finished without moving a figure.
        </string>
    <string name="help_rules_answer6">
        It is the choice of the recent player which allowed figure he wants to move. The dice number cannot be spreaded on more than one figure.
        </string>
    <string name="help_rules_answer7">
        In the 4 endfields of each player there exists 2 special rules.
        First: It is not allowed to jump over other figures in the endfield.
        Second: You can only roll dice once if a figure is on the endfield but not in the goal position.
    </string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Julia Schneider</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-ludo">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_rollDice3times_switch">Roll dice three times is allowed</string>
    <string name="pref_rollDice3times_switch_summary"> A player who has no figures in the game has 3 tries to throw a six.</string>
    <string name="pref_keepScreenOn_switch">Screen stays on during game</string>
    <string name="pref_keepScreenOn_switch_summary">" During the whole game the screen stays active."</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This app is a boardgame for 1–6 players.</string>

    <string name="slide2_heading">Gamefields</string>
    <string name="slide2_text">There are 2 different gamefields. One with up to 4 players and one with up to 6 players.
        Started games can be saved. </string>

    <string name="slide3_heading">Rules of the game</string>
    <string name="slide3_text">The rules are explained in the help section. Additionally it is possible to play the game with own rules by choosing a figure and selecting the target field.
    This mode is called "play with own dice".</string>

    <string name="slide4_heading">Game settings</string>
    <string name="slide4_text">The color and name of the players can be free chosen. Additionally it can be chosen if a computer is the opponent.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <!-- ###GAME### -->
    <string name="playername_default_value">player</string>
    <string name="computername_default_value">computer</string>
    <string name="add_player">add player</string>
    <string name="start_game">Start Game</string>
    <string name="roll_dice">roll dice</string>
    <string name="player_name">It´s your turn %p</string>
    <string name="finished_Game">Game is finished.</string>
    <string name="game_type">%max players</string>
    <string name="choose_color">Please choose a player color.</string>
    <string name="max_player_reached">Maximum number of player reached.</string>
    <string name="Missing_playername">Please give every player a name</string>
    <string name="color_uniqueness">Please select unique colors for each player.</string>
    <string name="header_change_rules">Special rules</string>
    <string name="initial_name_field">name</string>
    <string name="OverwriteResumableGame">The resumable game will be overwritten if you continue.</string>
    <string name="OverwriteResumableGameTitle">Overwrite resumable game?</string>
    <string name="LeaveGame">The recent game will be closed if you continue</string>
    <string name="LeaveGameTitle">Close recent game?</string>
    <string name="enough_players">Please select at least 2 players to play.</string>
    <string name="GameFinished">The game is finished.</string>
    <string name="Congrats">Congratulation!</string>
    <string name="Winner">%n</string>
    <string name="LeaveWinDialogTitle">Do you want to leave this dialog?</string>
    <string name="LeaveWinDialog">If you continue it is not possible to go back, are you sure?</string>
    <string name="header_change_settings">General Settings</string>
    <string name="Task_Roll_Dice">Please roll dice.</string>
    <string name="TaskSetFigure">Please move desired figure.</string>
    <string name="play_with_own_dice">Play with own dice</string>
    <string name="no_resumable_game">No resumable Game. Please start a new game</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="choose_playername">Please type in a playername.</string>
    <string name="no">no</string>
    <string name="ContinueGameTitle">Player has finished. Do you want to continue the game?</string>
    <string name="action_showStatistics">Show statistics</string>
    <string name="info_own_dice_question">What means \"play with own dice\"?</string>
    <string name="info_own_dice_answer">To play with own dice means that the figure will be marked if you click on it and set to the clicked goalfield.
    Therefore playing a game with own rules and an external dice is possible.</string>
    <string name="only_person_player">To play with computer, you have to deactivate the \"use own dice mode\".</string>
    <string name="playername">Playername</string>
    <string name="number" translatable="false">Nr</string>
    <string name="max_text_length">Hint: The maximum length for a name is 8 characters.</string>


	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
	<string name="dialog_goodbye_google_desc">Our apps will have to say goodbye to Google Play. You can continue to use the app but you will not receive any updates in the future.\nYou can find more info about the reasons and why this isn\'t the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a></string>
	<string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>
