<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/header_change_settings">
        <SwitchPreference
            android:id="@+id/keepScreenOn"
            android:key="keepScreenOn"
            android:title="@string/pref_keepScreenOn_switch"
            android:summary="@string/pref_keepScreenOn_switch_summary"
            android:defaultValue="true"/>
        <!-- <Preference android:title="Test Setting"
             android:summary="Text Summary"/> -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/header_change_rules">
        <SwitchPreference
            android:id="@+id/switch_dice_3times"
            android:key="switch_dice_3times"
            android:title="@string/pref_rollDice3times_switch"
            android:summary="@string/pref_rollDice3times_switch_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
